--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="24" />
+        android:targetSdkVersion="20" />
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_casa"
+        android:icon="@drawable/casa"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
